<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:scaleType="centerCrop"
        android:src="@drawable/space" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/image_question"
                style="@style/ImageQuestion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:src="@drawable/question8" />

            <TextView
                android:id="@+id/question"
                style="@style/Question"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/question8" />

            <LinearLayout
                style="@style/AnswersGroup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin16"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <CheckBox
                        android:id="@+id/checkBox1"
                        style="@style/Answer"
                        android:layout_width="@dimen/margin0"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:text="@string/answer8a" />

                    <CheckBox
                        android:id="@+id/checkBox5"
                        style="@style/Answer"
                        android:layout_width="@dimen/margin0"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:text="@string/answer8e" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <CheckBox
                        android:id="@+id/checkBox2"
                        style="@style/Answer"
                        android:layout_width="@dimen/margin0"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:text="@string/answer8b" />

                    <CheckBox
                        android:id="@+id/checkBox6"
                        style="@style/Answer"
                        android:layout_width="@dimen/margin0"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:text="@string/answer8f" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <CheckBox
                        android:id="@+id/checkBox3"
                        style="@style/Answer"
                        android:layout_width="@dimen/margin0"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:text="@string/answer8c" />

                    <CheckBox
                        android:id="@+id/checkBox7"
                        style="@style/Answer"
                        android:layout_width="@dimen/margin0"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:text="@string/answer8g" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <CheckBox
                        android:id="@+id/checkBox4"
                        style="@style/Answer"
                        android:layout_width="@dimen/margin0"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:text="@string/answer8d" />

                    <CheckBox
                        android:id="@+id/checkBox8"
                        style="@style/Answer"
                        android:layout_width="@dimen/margin0"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:text="@string/answer8h" />

                </LinearLayout>

            </LinearLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin16">

                <Button
                    android:id="@+id/button_next"
                    style="@style/Button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:onClick="result"
                    android:text="@string/finish" />
            </RelativeLayout>
        </LinearLayout>
    </ScrollView>
</RelativeLayout>