<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:scaleType="centerCrop"
        android:src="@drawable/space" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/image_question"
                style="@style/ImageQuestion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:src="@drawable/question1" />

            <TextView
                android:id="@+id/question"
                style="@style/Question"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/question1" />

            <RadioGroup
                android:id="@+id/rg_answers"
                style="@style/AnswersGroup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <RadioButton
                    android:id="@+id/rb_answer1"
                    style="@style/Answer"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/answer1a" />

                <RadioButton
                    android:id="@+id/rb_answer2"
                    style="@style/Answer"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/answer1b" />

                <RadioButton
                    android:id="@+id/rb_answer3"
                    style="@style/Answer"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/answer1c" />
            </RadioGroup>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin16">

                <Button
                    android:id="@+id/button_next"
                    style="@style/Button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:onClick="nextQuestion"
                    android:text="@string/next" />
            </RelativeLayout>
        </LinearLayout>
    </ScrollView>
</RelativeLayout>